# predictive_maintenance_neural_network

./: README.md  main.py  pyproject.toml
