[tool.poetry]
name = "machine-failure-prediction"
version = "0.1.0"
description = "Prédiction d'échecs avec machine learning"
package-mode=false

[tool.poetry.dependencies]
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu-src"}
python = ">=3.10,<4.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
